# cpp-library-project

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: library.h
src/: library.cpp
tests/: test_library.cpp
